[package]
name = "be-erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1"
tide = "0.16.0"
async-std = { version = "1.12.0", features = [ "attributes" ] }
sqlx = { version = "0.4", features = [ "runtime-async-std-native-tls", "postgres" ] }
dotenv = "0.15"
futures-util = "0.3"
regex = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
calamine = "0.19.0"
chrono = "0.4.23"
sha256 = "1.1.2"
bcrypt = "0.14.0"